--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "colors": "^1.4.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "mercadopago": "^2.0.6",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
