--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,49 +1,130 @@
 {
-	"extends": "eslint:recommended",
-	"env": {
-		"node": true,
-		"es6": true
-	},
-	"parserOptions": {
-		"ecmaVersion": 2021
-	},
-	"rules": {
-		"arrow-spacing": ["warn", { "before": true, "after": true }],
-		"brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
-		"comma-dangle": ["error", "always-multiline"],
-		"comma-spacing": "error",
-		"comma-style": "error",
-		"curly": ["error", "multi-line", "consistent"],
-		"dot-location": ["error", "property"],
-		"handle-callback-err": "off",
-		"indent": ["error", "tab"],
-		"keyword-spacing": "error",
-		"max-nested-callbacks": ["error", { "max": 4 }],
-		"max-statements-per-line": ["error", { "max": 2 }],
-		"no-console": "off",
-		"no-empty-function": "error",
-		"no-floating-decimal": "error",
-		"no-inline-comments": "error",
-		"no-lonely-if": "error",
-		"no-multi-spaces": "error",
-		"no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
-		"no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
-		"no-trailing-spaces": ["error"],
-		"no-var": "error",
-		"object-curly-spacing": ["error", "always"],
-		"prefer-const": "error",
-		"quotes": ["error", "single"],
-		"semi": ["error", "always"],
-		"space-before-blocks": "error",
-		"space-before-function-paren": ["error", {
-			"anonymous": "never",
-			"named": "never",
-			"asyncArrow": "always"
-		}],
-		"space-in-parens": "error",
-		"space-infix-ops": "error",
-		"space-unary-ops": "error",
-		"spaced-comment": "error",
-		"yoda": "error"
-	}
-}
+    "env": {
+      "node": true,
+      "browser": true,
+      "commonjs": true,
+      "es2021": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 11,
+      "sourceType": "script"
+    },
+    "globals": {
+      "client": true
+    },
+    "extends": "eslint:recommended",
+    "rules": {
+      "no-unused-vars": "error",
+      "no-undef": "warn",
+      "no-extra-semi": "off",
+      "no-mixed-spaces-and-tabs": [
+        "error",
+        "smart-tabs"
+      ],
+      "valid-typeof": "error",
+      "no-unreachable-loop": "error",
+      "no-extra-parens": "warn",
+      "brace-style": [
+        "error",
+        "stroustrup",
+        {
+          "allowSingleLine": true
+        }
+      ],
+      "comma-spacing": "error",
+      "no-fallthrough": "off",
+      "comma-style": "error",
+      "curly": [
+        "error",
+        "multi-line",
+        "consistent"
+      ],
+      "dot-location": [
+        "error",
+        "property"
+      ],
+      "handle-callback-err": "off",
+      "indent": [
+        "error",
+        "tab",
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "max-nested-callbacks": [
+        "error",
+        {
+          "max": 4
+        }
+      ],
+      "max-statements-per-line": [
+        "error",
+        {
+          "max": 2
+        }
+      ],
+      "no-unsafe-negation": "error",
+      "no-self-compare": "warn",
+      "no-unreachable": "error",
+      "no-self-assign": "warn",
+      "no-delete-var": "error",
+      "no-empty-function": "off",
+      "no-floating-decimal": "error",
+      "dot-notation": "error",
+      "no-useless-return": "error",
+      "no-useless-concat": "error",
+      "no-useless-escape": "warn",
+      "no-dupe-else-if": "error",
+      "no-inline-comments": "error",
+      "no-lonely-if": "error",
+      "no-redeclare": "error",
+      "no-return-await": "warn",
+      "no-multi-spaces": "error",
+      "no-multiple-empty-lines": [
+        "error",
+        {
+          "max": 2,
+          "maxEOF": 1,
+          "maxBOF": 0
+        }
+      ],
+      "no-empty": [
+        "error",
+        {
+          "allowEmptyCatch": true
+        }
+      ],
+      "callback-return": "error",
+      "no-shadow": "off",
+      "no-trailing-spaces": [
+        "error"
+      ],
+      "no-var": "error",
+      "object-curly-spacing": [
+        "error",
+        "always"
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "space-before-blocks": "error",
+      "space-before-function-paren": [
+        "error",
+        {
+          "anonymous": "never",
+          "named": "always",
+          "asyncArrow": "always"
+        }
+      ],
+      "space-in-parens": "error",
+      "space-infix-ops": "error",
+      "space-unary-ops": "error",
+      "spaced-comment": "error",
+      "yoda": "error"
+    }
+  }
