--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "euandrelucas",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
     "colors": "^1.4.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
