--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ CLIENT_ID=XXXXXXXXXXXXXXXXXX
 CLIENT_SECRET=XXXXXXXXXXXXXXXXXX
 CLIENT_TOKEN=XXXXXXXXXXXXXXXXXX
 MONGO_URI=mongodb+srv://dados_aqui/nomedobanco?retryWrites=true&w=majority
+SPOTIFY_ID=XXXXXXXXXXXXXXXXXX
+SPOTIFY_SECRET=XXXXXXXXXXXXXXXXXX
