--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "cheerio": "^1.0.0-rc.12",
     "colors": "^1.4.0",
+    "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mercadopago": "^2.0.6",
     "mongoose": "^8.0.3",
     "vulkava": "^1.6.2"
