--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "fastify": "^4.25.2",
     "mercadopago": "^2.0.6",
     "mongoose": "^8.0.3",
     "vulkava": "^1.6.2"
