--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lyra is a Discord Bot",
   "main": "src/index.js",
   "scripts": {
-    "start": "node .",
+    "start": "node --expose-gc --gc-interval=100 .",
     "prod": "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 node --expose-gc --gc-interval=100 ."
   },
   "keywords": [],
