--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   lyra:
-    image: lyra/bot
+    build:
+      context: ./lyra
     container_name: lyra
     hostname: gotenks
     restart: always
@@ -10,14 +11,11 @@ services:
       - bridge
     ports:
       - "3201:80"
-    deploy:
-      resources:
-        limits:
-          cpus: '4'
-          memory: 512M
-        reservations:
-          cpus: '1'
-          memory: 20M
+    cpuset: "0-5"
+    mem_limit: "16g"
     extra_hosts:
       - "mongoservice:172.17.0.1"
-      
+
+networks:
+  bridge:
+    driver: bridge
