--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mercadopago": "^2.0.6",
     "mongoose": "^8.1.0",
     "nubank-api": "^3.1.1",
+    "sharp": "^0.33.2",
     "uuid": "^9.0.1",
     "vulkava": "^1.6.2"
   },
