--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "canvas": "^2.11.2",
     "cheerio": "^1.0.0-rc.12",
     "colors": "^1.4.0",
     "discord-html-transcripts": "^3.2.0",
