--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node --optimize_for_size --expose-gc --gc-interval=100 .",
-    "prod": "node --optimize_for_size --expose-gc --gc-interval=100 ."
+    "prod": "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 node --use-strict --harmony --optimize_for_size --no-lazy --trace-gc --no-warnings --no-deprecation  --expose-gc --gc-interval=1 ."
   },
   "keywords": [],
   "author": "euandrelucas",
@@ -13,17 +13,16 @@
   "dependencies": {
     "axios": "^1.6.5",
     "canvas": "^2.11.2",
+    "captcha-generator-alphanumeric": "^1.10.2",
     "cheerio": "^1.0.0-rc.12",
     "colors": "^1.4.0",
     "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.25.2",
-    "mercadopago": "^2.0.6",
     "mongoose": "^8.1.0",
     "nubank-api": "^3.1.1",
     "sharp": "^0.33.2",
-    "uuid": "^9.0.1",
     "vulkava": "^1.6.2"
   },
   "devDependencies": {
