--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node --optimize_for_size --expose-gc --gc-interval=100 .",
-    "prod": "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 node --use-strict --harmony --optimize_for_size --no-lazy --trace-gc --no-warnings --no-deprecation  --expose-gc --gc-interval=1 ."
+    "prod": "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 node --use-strict --harmony --optimize_for_size --no-lazy --no-warnings --no-deprecation  --expose-gc --gc-interval=1 ."
   },
   "keywords": [],
   "author": "euandrelucas",
