--- a/src/modules/images/package.json
+++ b/src/modules/images/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@lyrabot/images",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "prod": "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 node --use-strict --harmony --optimize_for_size --no-lazy --no-warnings --no-deprecation  --expose-gc --gc-interval=1 ."
   },
   "keywords": [],
   "author": "",
