--- a/package.json
+++ b/package.json
@@ -13,21 +13,19 @@
   "dependencies": {
     "@fastify/cors": "^8.5.0",
     "axios": "^1.6.7",
-    "canvas": "^2.11.2",
-    "captcha-generator-alphanumeric": "^1.10.2",
-    "cheerio": "^1.0.0-rc.12",
     "colors": "^1.4.0",
     "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.26.0",
     "mongoose": "^8.1.0",
-    "os": "^0.1.2",
     "pidusage": "^3.0.2",
-    "sharp": "^0.33.2",
     "vulkava": "^1.6.2"
   },
   "devDependencies": {
-    "eslint": "^8.56.0"
+    "canvas": "^2.11.2",
+    "cheerio": "^1.0.0-rc.12",
+    "eslint": "^8.56.0",
+    "sharp": "^0.33.2"
   }
 }
