--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.26.0",
     "mongoose": "^8.1.0",
+    "node-fetch": "^3.3.2",
     "pidusage": "^3.0.2",
     "vulkava": "^1.6.2"
   },
