--- a/packages/images/package.json
+++ b/packages/images/package.json
@@ -13,6 +13,7 @@
     "@fastify/cors": "^9.0.1",
     "axios": "^1.6.7",
     "canvas": "^2.11.2",
+    "colors": "^1.4.0",
     "fastify": "^4.26.0",
     "sharp": "^0.33.2"
   }
