--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "canvafy": "^7.0.4",
     "colors": "^1.4.0",
+    "diff": "^5.1.0",
     "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
